--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul>
         <li id="edit1"><span> Edit 1 </span></li>
         <li id="edit2"><span> Edit 2 </span></li>
-        <li id="edit3"><span> Edit 3 </span></li>
+        <li id="edit3"><span> Error </span></li>
       </ul>
     </div>
   </div>
