--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="edit_content" class="content">
       <ul>
         <li id="edit1"><span> Edit 1 </span></li>
-        <li id="edit2"><span> Edit 2 </span></li>
+        <li id="edit2"><span><a href="FallTerm/index.html">Edit 2</a></span></li>
         <li id="edit3"><span> Error </span></li>
       </ul>
     </div>
