--- a/NexusTerm/index.html
+++ b/NexusTerm/index.html
@@ -13,8 +13,8 @@
 </head>
 <body id="body">
   <header id="header">
-    Nuke Industries Unified Operating System<br>
-    Copyright 20175-2077 Nuke Industries<br>
+    Nexus Industries Unified Operating System<br>
+    Copyright 20175-2077 Nexus Industries<br>
     -Server <span id="server">1</span>-
   </header>
   <!-- script below changes server # -->
