--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta property="og:image:width" content="512" />
 <meta property="og:image:height" content="512" />
-<title>Terminal</title>
+<title>Nexus Terminal</title>
 <link rel="preload" as="image" href="bg.png">
 <link rel="icon" type="image/x-icon" href="css/favicon.ico" />
 <link rel="icon" type="image/png" href="css/favicon.ico" />
@@ -19,8 +19,8 @@
     <div id="file_content" class="content">
       <ul>
         <li id="init"><span>Home</span></li>
-        <li id="file1"><span>The Manhattan Project</span></li>
-        <li id="file2"><span>[REDACTED] <a href="Blackhole/BlackholePhotos.html">[CON]</a></span></li>
+        <li id="file1"><span>[The Manhattan Project]</span></li>
+        <li id="file2"><span>[BlackHoles] <a href="Blackhole/BlackholePhotos.html">[CON]</a></span></li>
       </ul>
     </div>
   </div>
@@ -28,9 +28,9 @@
     <span class="menu_item">Edit</span>
     <div id="edit_content" class="content">
       <ul>
-        <li id="edit1"><span> Edit 1 </span></li>
-        <li id="edit2"><span><a href="FallTerm/index.html">Edit 2</a></span></li>
-        <li id="edit3"><span> Error </span></li>
+        <li id="edit1"><span>Edit 1</span></li>
+        <li id="edit2"><span><a href="NexusTerm/index.html">Edit 2</a></span></li>
+        <li id="edit3"><span>Error</span></li>
       </ul>
     </div>
   </div>
@@ -38,7 +38,7 @@
     <span class="menu_item">Intel</span>
     <div id="help_content" class="content">
       <ul>
-        <li id="about"><span>Type</span></li>
+        <li id="about"><span>Data</span></li>
       </ul>
     </div>
   </div>
@@ -47,7 +47,7 @@
 <div id="main_content"></div>
 
 <h1><div id="init_page" class="page">
-<p>Welcome to the Terminal Project</p>
+<p>Welcome to the Nexus Terminal</p>
 <p>Still In Development...</p>
 </div></h1>
 
