--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <span class="menu_item">Edit</span>
     <div id="edit_content" class="content">
       <ul>
-        <li id="edit1"><span>Edit 1</span></li>
-        <li id="edit2"><span><a href="NexusTerm/index.html">Edit 2</a></span></li>
+        <li id="edit1"><span><a href="NexusRoom/index.html">Chat</a></span></li>
+        <li id="edit2"><span><a href="NexusTerm/index.html">Terminal</a></span></li>
         <li id="edit3"><span>Error</span></li>
       </ul>
     </div>
