--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <span class="menu_item">Files</span>
     <div id="file_content" class="content">
       <ul>
-        <li id="init"><span>Home</span></li>
+        <li id="init"><span>[Home]</span></li>
         <li id="file1"><span>[The Manhattan Project]</span></li>
         <li id="file2"><span>[BlackHoles] <a href="Blackhole/BlackholePhotos.html">[CON]</a></span></li>
       </ul>
     </div>
   </div>
   <div id="edit" class="menu">
-    <span class="menu_item">Edit</span>
+    <span class="menu_item">Programmes</span>
     <div id="edit_content" class="content">
       <ul>
         <li id="edit1"><span><a href="NexusRoom/index.html">Chat</a></span></li>
         <li id="edit2"><span><a href="NexusTerm/index.html">Terminal</a></span></li>
-        <li id="edit3"><span>Error</span></li>
+        <li id="edit3"><span>Erro<a href="NexusLog/index.html">r</a></span></li>
       </ul>
     </div>
   </div>
@@ -138,7 +138,31 @@
 
 <div id="edit3_page" class="page">
 <p>Error editing file.</p>
-<p>Error.</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Error</p>
+<p>Action Terminated</p>
 </div>
 
 <div id="about_page" class="page">
