--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul>
         <li id="edit1"><span><a href="NexusRoom/index.html">Chat</a></span></li>
         <li id="edit2"><span><a href="NexusTerm/index.html">Terminal</a></span></li>
-        <li id="edit3"><span>Erro<a href="NexusLog/index.html">r</a></span></li>
+        <li id="edit3"><span>Erro<a href="NexusFireWall/index.html">r</a></span></li>
       </ul>
     </div>
   </div>
