--- a/NexusFireWall/index.html
+++ b/NexusFireWall/index.html
@@ -61,7 +61,7 @@
           <pre>Nexus Industries (TM) Termlink Protocol</pre>
           <br>
           <pre>Password Accepted.</pre>
-          <pre><a href="NothinghHereYet">Press Enter to Start Again</a></pre>
+          <pre><a href="../NexusHome/index.html">Press Here to Enter</a></pre>
         </div>
       </div>
     </div>
