--- a/NexusHome/index.html
+++ b/NexusHome/index.html
@@ -28,9 +28,9 @@
     <span class="menu_item">Programmes</span>
     <div id="edit_content" class="content">
       <ul>
-        <li id="edit1"><span><a href="NexusRoom/index.html">Chat</a></span></li>
-        <li id="edit2"><span><a href="NexusTerm/index.html">Terminal</a></span></li>
-        <li id="edit3"><span>Erro<a href="NexusFireWall/index.html">r</a></span></li>
+        <li id="edit1"><span><a href="../NexusRoom/index.html">Chat</a></span></li>
+        <li id="edit2"><span><a href="../NexusTerm/index.html">Terminal</a></span></li>
+        <li id="edit3"><span>Erro<a href="../NexusFireWall/index.html">r</a></span></li>
       </ul>
     </div>
   </div>
