--- a/NexusHome/index.html
+++ b/NexusHome/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div id="edit" class="menu">
-    <span class="menu_item">Programmes</span>
+    <span class="menu_item">Programs</span>
     <div id="edit_content" class="content">
       <ul>
         <li id="edit1"><span><a href="../NexusRoom/index.html">Chat</a></span></li>
