--- a/YourHouse/303.html
+++ b/YourHouse/303.html
@@ -6,41 +6,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="404.css" />
     <link rel="stylesheet" type="text/css" href="PxPlusVGASquarePx.css" />
-    <title>We Got Em</title>
-  </head>
-  <body>
-    <h1 id="header">Ladies and Gentlemen We Got Em</h1>
-    <p id="detail">Deal With It...</p>
-    <button id="sfnButton" onclick="statsForNerds()">Check This Shit</button>
-    <div id="sfn" style="display: none;">
-      Requested URL: <span id="full">Fetching URL...</span><br />
-      User IP: <span id="ip">Fetching IP... Bruh VPNs Sucks</span><br />
-      Error code: Your House<br />
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756835229788588" crossorigin="anonymous"></script>
-      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5756835229788588" data-ad-slot="6230603875" data-ad-format="auto" data-full-width-responsive="true"></ins>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    </div>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756835229788588" crossorigin="anonymous"></script>
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5756835229788588" data-ad-slot="6230603875" data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <script src="/js/lib/jquery-3.2.1.min.js"></script>
-    <script>
-      function statsForNerds() {
-        var x = document.getElementById("sfn");
-        if (x.style.display === "none") {
-          x.style.display = "block";
-          console.log("[ℹ️] Showing the stats for nerds!");
-        } else {
-          x.style.display = "none";
-          console.log("[ℹ️] Hiding the stats for nerds!");
-        }
-      }
-      document.getElementById("full").innerText = window.location.href;
+    <title>...</title>
 
-      $.getJSON("https://ipgeolocation.abstractapi.com/v1/?api_key=a1ebbf04c6164dd98b527e26c57fc28c", function (data) {
-        document.getElementById("ip").innerText = data.ip_address;
-      });
-    </script>
-    <script src="main.js"></script>
+</head>
+  <body>
+
+
+
   </body>
 </html>
